# gpu_ba

./: CMakeLists.txt  CalcUtilsGPU.cu  CalcUtilsGPU.h  DataHandler.cpp  DataHandler.h  Inverse.cuh  LMalgorithm.cpp  LMalgorithm.h  MBATimer.h  NCGalgorithm.cpp  NCGalgorithm.h  ResInt.cpp  ResInt.h  Solve.cuh  driver.cpp  resource.h
